--- a/estatisticas-ebook/pom.xml
+++ b/estatisticas-ebook/pom.xml
@@ -13,6 +13,15 @@
     </properties>
 
     <dependencies>
-        
+        <dependency>
+            <groupId>cotuba</groupId>
+            <artifactId>cotuba-cli</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
     </dependencies>
 </project>
