--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>cotuba-core</module>
 		<module>cotuba-cli</module>
+		<module>cotuba-pdf</module>
 	</modules>
 
 	<dependencies>
