--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -17,6 +17,7 @@
 		<module>cotuba-core</module>
 		<module>cotuba-cli</module>
 		<module>cotuba-pdf</module>
+		<module>cotuba-epub</module>
 	</modules>
 
 	<dependencies>
