--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -18,64 +18,8 @@
 		<module>cotuba-cli</module>
 		<module>cotuba-pdf</module>
 		<module>cotuba-epub</module>
+		<module>cotuba-html</module>
 	</modules>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.atlassian.commonmark</groupId>
-			<artifactId>commonmark</artifactId>
-			<version>0.11.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>nl.siegmann.epublib</groupId>
-			<artifactId>epublib-core</artifactId>
-			<version>3.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>net.sf.kxml</groupId>
-					<artifactId>kxml2</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>xmlpull</groupId>
-					<artifactId>xmlpull</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sf.kxml</groupId>
-			<artifactId>kxml2</artifactId>
-			<version>2.5.1-SNAPSHOT</version>
-			<classifier>jar-with-dependencies</classifier>
-			<exclusions>
-				<exclusion>
-					<groupId>org.xmlpull</groupId>
-					<artifactId>xmlpull</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>html2pdf</artifactId>
-			<version>2.0.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.itextpdf</groupId>
-					<artifactId>forms</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -86,21 +30,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>psiegman-repo</id>
-			<url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
-		</repository>
-		<repository>
-			<id>iText Repository</id>
-			<name>iText Repository-releases</name>
-			<url>https://repo.itextsupport.com/releases</url>
-		</repository>
-		<repository>
-		    <id>mvn-repo</id>
-		    <url>https://rawgit.com/alexandreaquiles/mvn-repo/master</url>
-    	</repository>
-	</repositories>
 
 </project>
