--- a/cotuba/cotuba-cli/pom.xml
+++ b/cotuba/cotuba-cli/pom.xml
@@ -24,6 +24,23 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-epub</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-pdf</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-html</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 	</dependencies>
 
