--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -19,6 +19,7 @@
 		<module>cotuba-pdf</module>
 		<module>cotuba-epub</module>
 		<module>cotuba-html</module>
+		<module>cotuba-web</module>
 	</modules>
 
 	<build>
